Add ability to send WhatsApp messages to customers
Integrates Meta's WhatsApp API to allow sending messages to customers from the application.
